--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     <h2 class="blind">광고영역</h2>
     <div class="slider">
       <ul class="slider-pagination">
-        <li data-value="1">01</li>
-        <li data-value="2">02</li>
-        <li data-value="3">03</li>
+        <li class="slider-value active" data-value="1">01</li>
+        <li class="slider-value" data-value="2">02</li>
+        <li class="slider-value" data-value="3">03</li>
       </ul>
       <ul class="slider-wrap">
         <li><img src="https://via.placeholder.com/700x700/CD942D/999?text=img1" alt="img1"></li>
@@ -132,15 +132,27 @@
 
   <!-- main -->
   <main id="main">
-     <section id="best_movie" >
-
-     </section>
+    <section id="best_movie" >
+      <div class="main-title">
+        <h2>best movie</h2>
+        <p>지금 가장 인기있는 작품을 소개합니다.</p>
+      </div>
+      <div class="best_movie-container">
+        <div class="best_movie-content">
+          <img src="https://via.placeholder.com/300x450/999/000?text=poster1" alt="poster1">
+          <h3 class="best_movie-tit">탑건: 매버릭</h3>
+          <p>예매율 50.8%</p>
+          <span class="star">9.8</span>
+        </div>
+      </div>
+    </section>
   </main>
   <!-- footer -->
   <footer>
 
   </footer>
-
+  <!-- go to up -->
+  <button id="goToUp"><span>위로</span></button>
   <!-- script -->
   <script src="./js/slider.js"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
