[220712] css 네이밍 및 js 수정

--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
         <p>롯데시네마가 준비한 특별한 시간</p>
       </div>
       <ul class="preview-tab">
-        <li class="preview-tab-active"><h3>시사회</h3></li>
+        <li class="active"><h3>시사회</h3></li>
         <li><h3>무대인사</h3></li>
       </ul>
       <ul class="preview-container">
-        <li class="preview-content preview-content-active">
+        <li class="preview-content active">
           <div class="preview-box">
             <div class="preview-img">
               <img src="./images/preview_img1.png" alt="체리마호 스폐셜 GV">
