[220713] 영화 페이지 반응형 작업

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>롯데시네마</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="롯데시네마 사이트 반응형 리디자인 웹사이트 입니다.">
   <meta name="Keywords" content="롯데시네마, LOTTE CINEMA, 시네마, CINEMA, 영화, 영화관, 극장, Movie, Theater, 예매, 현재상영작, 상영예정작, 개봉영화, 영화예매, 상영시간표" />
 
   <!-- open graph -->
   <meta property="og:title" content="롯데시네마">
-  <meta property="og:url" content="https://Shape2ee.github.io">
+  <meta property="og:url" content="https://shape2ee.github.io/lotteCinema">
   <!-- <meta property="og:image" content=""> -->
   <meta property="og:description" content="롯데시네마 사이트 반응형 리디자인 웹사이트 입니다.">
   <meta property="og:type" content="website">
@@ -18,7 +18,7 @@
   <!-- twitter open graph -->  
   <meta name="twitter:card" content="Summary">
   <meta name="twitter:creator" content="shape2ee">
-  <meta name="twitter:url" content="https://Shape2ee.github.io">
+  <meta name="twitter:url" content="https://shape2ee.github.io/lotteCinema">
   <meta name="twitter:title" content="롯데시네마">
   <meta name="twitter:description" content="롯데시네마 사이트 반응형 리디자인 웹사이트 입니다.">
   <!-- <meta name="twitter:image" content=""> -->
@@ -58,7 +58,7 @@
       <li>
         <a href="./movie/movie.html">영화</a>
         <ul>
-          <li><a href="#">홈</a></li>
+          <li><a href="./movie/movie.html">홈</a></li>
           <li><a href="#">현재상영작</a></li>
           <li><a href="#">상영예정작</a></li>
           <li><a href="#">아르떼</a></li>
@@ -108,7 +108,7 @@
         <div class="x_btn"><span class="blind">닫기</span></div>
       </div>
       <ul class="m_gnb-menu">
-        <li><a href="#">영화</a></li>
+        <li><a href="./movie/movie.html">영화</a></li>
         <li><a href="#">영화관</a></li>
         <li><a href="#">스페셜관</a></li>
         <li><a href="#">이벤트</a></li>
