[220714] tiketing page 추가

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
   <!-- header -->
   <header id="header">
-    <h1 class="logo"><a href="/"><span class="blind">롯데시네마</span></a></h1>
+    <h1 class="logo"><a href="./index.html"><span class="blind">롯데시네마</span></a></h1>
     <!-- gnb -->
     <ul id="gnb">
       <li>
-        <a href="#">예매</a>
+        <a href="./tiketting/tiketing.html">예매</a>
         <ul>
-          <li><a href="#">예매하기</a></li>
+          <li><a href="./tiketting/tiketing.html">예매하기</a></li>
           <li><a href="#">상영시간표</a></li>
           <li><a href="#">할인안내</a></li>
         </ul>
@@ -123,7 +123,7 @@
       <ul class="m_gnb-utill">
         <li><a href="#">로그인</a></li>
         <li><a href="#">회원가입</a></li>
-        <li><a href="#">바로예매</a></li>
+        <li><a href="./tiketting/tiketing.html">바로예매</a></li>
       </ul>
     </nav>
 
