--- a/movie/movie.html
+++ b/movie/movie.html
@@ -23,9 +23,9 @@
     <!-- gnb -->
     <ul id="gnb">
       <li>
-        <a href="#">예매</a>
+        <a href="../tiketting/tiketing.html">예매</a>
         <ul>
-          <li><a href="#">예매하기</a></li>
+          <li><a href="../tiketting/tiketing.html">예매하기</a></li>
           <li><a href="#">상영시간표</a></li>
           <li><a href="#">할인안내</a></li>
         </ul>
@@ -79,11 +79,11 @@
     <!-- mobile gnb -->
     <nav id="m_gnb" class="m_gnb">
       <div class="m_gnb-head">
-        <h3><a href="#"><span class="blind">로고</span></a></h3>
+        <h3><a href="../"><span class="blind">로고</span></a></h3>
         <div class="x_btn"><span class="blind">닫기</span></div>
       </div>
       <ul class="m_gnb-menu">
-        <li><a href="#">영화</a></li>
+        <li><a href="./movie.html">영화</a></li>
         <li><a href="#">영화관</a></li>
         <li><a href="#">스페셜관</a></li>
         <li><a href="#">이벤트</a></li>
@@ -98,7 +98,7 @@
       <ul class="m_gnb-utill">
         <li><a href="#">로그인</a></li>
         <li><a href="#">회원가입</a></li>
-        <li><a href="#">바로예매</a></li>
+        <li><a href="../tiketting/tiketing.html">바로예매</a></li>
       </ul>
     </nav>
     <!-- utill -->
